--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Legofy</string>
+    <string name="camera_button">Camera</string>
+    <string name="image_button">Image</string>
 </resources>
