--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Legofy</string>
     <string name="camera_button">Camera</string>
     <string name="image_button">Image</string>
+    <string name="error_getting_camera">Error opening camera</string>
 </resources>
